--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -729,5 +729,6 @@
   "MAX": "MAX",
   "Secure & Seamless Trading, Always at Your Fingertips": "Secure & Seamless Trading, Always at Your Fingertips",
   "trade.totalSize": "Total Size",
-  "trade.layout": "Layout"
+  "trade.layout": "Layout",
+  "aboutUs": "About Us"
 }
