--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -680,7 +680,7 @@
   "trade.notReady": "Please connect wallet first",
   "web.faucet": "Faucet",
   "web.points": "Points",
-  "stats.title": "AnteX Stats",
+  "stats.title": "AntX Stats",
   "stats.subTitle": "Transparency in Every Trade. Zero Blind Spots.",
   "trade.dailyTrades": "24H Trades",
   "earnFromTrade": "Earn from Trading",
