--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -674,7 +674,7 @@
   "referral.status": "Status",
   "web.referral": "Referral",
   "referral.shareMessage": "Check out this referral link and earn up to a 10% rebate when you invite friends!",
-  "referral.shareDialogMessage": "Let's trade at AntEx together",
+  "referral.shareDialogMessage": "Let's trade at AntX together",
   "trade.cancelAll": "Cancel All",
   "trade.cancelAllConfirm": "Are you sure you want to cancel all orders?",
   "trade.notReady": "Please connect wallet first",
